fix operation problem

--- a/index.html
+++ b/index.html
@@ -60,11 +60,12 @@
             <a href="#restaurants" class="cta">Explorer nos restaurants</a>
         </section>
 
-        
+
         <section class="operation">
 
-                <h2 class="operation__title ">Fonctionnement</h2>
-                <ul class="operation__line">
+            <h2 class="operation__title ">Fonctionnement</h2>
+            <div class="operation__line">
+                <ul>
                     <li class="operation__button">
                         <i class="fa-solid fa-mobile-screen-button"></i>
                         <div class="operation__text">Choisissez un restaurant</div>
@@ -81,6 +82,7 @@
                         <div class="number">3</div>
                     </li>
                 </ul>
+            </div>
         </section>
 
         <section class="restaurants " id="restaurants">
